--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,90 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+    background: #2D2E36;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.card{
+    padding: 1.56rem;
+    width: 22.5rem;
+    height: auto;
+    background: #383A45;
+    border-radius: 0.5rem;
+}
+
+.button-link {
+    background: #8D91A6;
+    width: 1.25rem;
+    height: 1.2rem;
+    margin-top: 0.1rem;
+
+}
+
+.card-image{
+    margin-bottom: 1rem;
+    border-radius: 0.5rem;
+  }
+  
+.card-image > img {
+    width: 100%;
+}
+
+.card-body > h3 {
+    font-size: 1.8rem;
+    color: white;
+    line-height: 2rem;
+    font-weight: 400;
+    margin-bottom: 1rem;    
+}
+
+.card-body {
+    margin-bottom: 1rem; 
+}
+
+.card-body > h3{
+    font-size: 1.8rem;
+    color: white;
+    line-height: 2rem;
+    font-weight: 400;
+    margin-bottom: 1rem;
+}
+
+.card-body > p {
+    color: #8D91A6;
+    font-size: 1rem;
+    line-height: 1.7rem; 
+}
+
+@media (min-width: 420px) {
+    .card-image{
+        margin-bottom: 0;
+        margin-right: 1rem;
+        width: 30rem;
+    }
+
+    .card-main > h3 {
+        margin-top: 1.5rem;
+    }
+    .card{
+        width: 45.56rem;
+        height: auto;
+        padding: 1.56;
+        background: #383A45;
+        border-radius: 0.5;
+        display: flex;
+    }
+
+}
+  
+
